--- a/source/Rakefile
+++ b/source/Rakefile
@@ -120,7 +120,7 @@ end
 
 desc 'Start IRB with application environment loaded'
 task "console" do
-  exec "pry -r./config/environment --prompt-simple"
+  exec "pry -r./config/environment --simple-prompt"
 end
 
 desc "Run the specs"
